RegisterChannelToSelector is wip